# literal

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  ci.yml
Document/list/: READMD.md
include/literal/: debug.h  macro_helper.h
include/literal/list/: list.h  node.h  singly_list.h  singly_tailq.h  tailq.h
lib/: CMakeLists.txt
lib/debug/: CMakeLists.txt  unreachable.cpp
test/: CMakeLists.txt
test/debug/: CMakeLists.txt  unreachable.cpp
test/list/: CMakeLists.txt  list.cpp  singly_list.cpp  singly_tailq.cpp  tailq.cpp
